<resources>
    <string name="app_name" translatable="false">Notes</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="id" translatable="false">ID</string>
    <string name="description">Description</string>
    <string name="edit">edit</string>
    <string name="details">Details</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_library">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="edit_note">Are you sure you want to edit the Note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="operation_canceled">Operation Canceled</string>
    <string name="add_note">Are you sure you want to add a Note?</string>
    <string name="note_delete">Are you sure you want to delete?</string>
    <string name="creation_date">Creation Date</string>
    <string name="edit_date">Edit Date</string>
    <string name="error_internal_storage">Could not read Notes from internal storage (no Notes yet?).</string>
    <string name="error_reading_storage">Error reading Notes from internal storage.</string>
    <string name="notes_bin" translatable="false">Notes.bin</string>
    <string name="error">Error:</string>
    <string name="not_searching_parameter">You\'re not searching by any parameter</string>
    <string name="no_notes_found">No notes found...</string>
    <string name="insert_video">insert Video</string>
    <string name="insert_image">Insert Image</string>
    <string name="no_filter">You are not filtering by anything</string>
    <string name="search_by">Search by:</string>
    <string name="ID" translatable="false">ID</string>
    <string name="keywords">Keywords</string>
    <string name="ok">OK</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_image">Add Image</string>
    <string name="add_video">Add Video</string>
    <string name="creation_date_2points">Creation Date:</string>
    <string name="edit_date_2points">Edit Date:</string>
    <string name="title_2points">Title:</string>
    <string name="description_2points">Description:</string>
    <string name="keywords_2points">Keywords:</string>
    <string name="no_body_image_video">The Note must have at least a body or an image or a video</string>
    <string name="must_have_title">The Note must have a title</string>
    <string name="must_have_keyword">The Note must have at least a keyword</string>
    <string name="nothing_searched">Nothing searched</string>
    <string name="not_completed">Not completed yet...</string>
    <string name="context_explain">Press Map to open Google Maps\nPress Refresh to update Snapshot\nPress Settings to setup Fences</string>
    <string name="fence_settings">Fence Settings</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="web">WEB</string>
    <string name="update_context">Update Context</string>
    <string name="filter_by_context">Filter by Context</string>
    <string name="contains_video">Contains Video</string>
    <string name="contains_image">Contains Image</string>
    <string name="contains_description">Contains Description</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="plugged_in">Plugged in</string>
    <string name="unplugged">Unplugged</string>

</resources>
